# protohackers

./: README.md
gleam/00-smoke-test/: .dockerignore  Dockerfile  README.md  gleam.toml  manifest.toml
gleam/00-smoke-test/src/: smoke_test.gleam
gleam/01-prime-time/: README.md  gleam.toml  manifest.toml
gleam/01-prime-time/src/: prime_time.gleam
go/00-smoke-test/: echo.go  fly.toml  go.mod  main.go
go/01-prime-time/: error.go  go.mod  main.go  prime.go
go/03-budget-chat/: go.mod  main.go  server.go
go/04-unusual-database/: Makefile  fly.toml  go.mod  main.go
go/04-unusual-database/server/: tcp.go  udp.go
go/05-mob-in-the-middle/: 05-mob-in-the-middle  go.mod  main.go  main_test.go
go/06-speed-daemon/: fly.toml  go.mod  go.sum  main.go  main_test.go
go/06-speed-daemon/client/: camera.go  client.go  client_test.go  dispatcher.go
go/06-speed-daemon/test/: messages.sh
go/07-line-reversal/: fly.toml  go.mod  go.sum  main.go  main_test.go
go/07-line-reversal/server/: udp.go
rust/00-smoke-test/: Cargo.toml  Dockerfile  fly.toml
rust/00-smoke-test/src/: main.rs
rust/01-prime-time/: Cargo.toml  Dockerfile
rust/01-prime-time/src/: lib.rs  main.rs
rust/02-means-to-an-end/: Cargo.toml  Dockerfile
rust/02-means-to-an-end/src/: main.rs
rust/03-budget-chat/: Cargo.toml  Dockerfile
rust/03-budget-chat/src/: main.rs
rust/04-unusual-database/: Cargo.toml  Dockerfile  fly.toml
rust/04-unusual-database/src/: main.rs
rust/05-mob-in-the-middle/: Cargo.toml  Dockerfile
rust/06-speed-daemon/: Cargo.toml  Dockerfile  fly.toml
(+16 files in other folders)
