[package]
name = "prime-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primes = "0.3.0"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde-jsonlines = "0.4.0"
serde_json = "1.0.87"
